src/objects/FF_Staging_Billing__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Event_Id__c</fullName>
        <description>Salesforce Id of the FinancialForce Billing Event that the integration will update.</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce Id of the FinancialForce Billing Event that the integration will update.</inlineHelpText>
        <label>Billing Event Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Event_Status__c</fullName>
        <description>Indicates the invoicing status of this Billing Event in JDE.</description>
        <inlineHelpText>Indicates the invoicing status of this Billing Event in JDE.</inlineHelpText>
        <label>Billing Event Status</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true indicates there was an error handling the billing event batch logic.  Once the error is resolved uncheck this field to allow the batch logic to process this record.</description>
        <inlineHelpText>When true indicates there was an error handling the billing event batch logic.  Once the error is resolved uncheck this field to allow the batch logic to process this record.</inlineHelpText>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Represents the date the billing event was invoiced in JDE.</description>
        <inlineHelpText>Represents the date the billing event was invoiced in JDE.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Represents the JDE Invoice number for this billing event.</description>
        <inlineHelpText>Represents the JDE Invoice number for this billing event.</inlineHelpText>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this billing event has been invoiced in JDE or not.</description>
        <inlineHelpText>Indicates whether this billing event has been invoiced in JDE or not.</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>FF Staging - Billing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Billing_Event_Id__c</columns>
        <columns>Billing_Event_Status__c</columns>
        <columns>IsProcessed__c</columns>
        <columns>IsCompleted__c</columns>
        <columns>Invoiced__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Has_Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STG-Billing-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Staging - Billing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>